compiler/tools/fpp-check/test/state_machine/redef/state.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/state_machine/redef/state.fpp:3.3
  state S
  ^
error: redefinition of symbol S
previous definition is here:
[ local path prefix ]/compiler/tools/fpp-check/test/state_machine/redef/state.fpp:2.3
  state S
  ^
